# frob

./: Cargo.toml  README.md
frob/: Cargo.toml
frob-brightness/: Cargo.toml
frob-brightness/src/: lib.rs  main.rs
frob-monitor/: Cargo.toml
frob-monitor/src/: cycle.rs  lib.rs  main.rs
frob-volume/: Cargo.toml
frob-volume/src/: lib.rs  main.rs
frob/src/: main.rs
midas/: Cargo.toml
midas-brightness/: Cargo.toml
midas-brightness/src/: lib.rs  main.rs
midas-clipboard-server/: Cargo.toml
midas-clipboard-server/src/: lib.rs  main.rs
midas-clipboard-server/src/cmd/: mod.rs  start.rs
midas-clipboard-server/src/wrapper/: atoms.rs  mod.rs  property_value_ref.rs  window.rs  window_id.rs
midas-monitor/: Cargo.toml
midas-monitor/src/: cycle.rs  main.rs
midas-volume/: Cargo.toml
midas-volume/src/: lib.rs  main.rs
midas/src/: main.rs
