[package]
name = "frob-brightness"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tool to control backlight brightness"
repository = "https://github.com/panicbit/frob"
documentation = "https://docs.rs/frob-brightness"
readme = "../README.md"

[dependencies]
dbus = "0.9.5"
fauxpas = "1.0.51"
structopt = "0.3.25"
