[package]
name = "frob-monitor"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tool to control monitor related aspects"
repository = "https://github.com/panicbit/frob"
documentation = "https://docs.rs/frob-monitor"
readme = "../README.md"

[dependencies]
anyhow = "1.0.51"
clap = { workspace = true }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
