[package]
name = "frob-volume"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tool to control system volume"
repository = "https://github.com/panicbit/frob-volume"
readme = "../README.md"

[dependencies]
clap = { workspace = true }
fauxpas = "1.0.51"
libpulse-binding = "2.25.0"