[package]
name = "frob"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tool to control multiple system aspects"
repository = "https://github.com/panicbit/frob"
readme = "../README.md"

[dependencies]
frob-brightness = { version = "0.1.0", path = "../frob-brightness" }
frob-monitor = { version = "0.1.0", path = "../frob-monitor" }
frob-volume = { version = "0.1.0", path = "../frob-volume" }

anyhow = "1.0.51"
structopt = "0.3.25"
